--- a/Overfittingbiaisedandunbiaisedvariance.html
+++ b/Overfittingbiaisedandunbiaisedvariance.html
@@ -12060,6 +12060,7 @@ $$\mathbb{E}[\frac{2}{N} x_i  \sum_{j=1}^N x_j] = \frac{2}{N} (  \sigma^2 + N \m
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">seed</span><span class="p">(</span><span class="mi">10</span><span class="p">)</span>
 <span class="n">mean_original</span><span class="o">=</span><span class="mi">0</span>
 <span class="n">var_original</span><span class="o">=</span><span class="mi">1</span>
+<span class="n">std_original</span><span class="o">=</span><span class="mi">1</span>
 
 <span class="c1">#Creates the x axis 120 values between -3 and 3.</span>
 <span class="n">x_values</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">linspace</span><span class="p">(</span><span class="o">-</span><span class="mi">3</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span> <span class="mi">120</span><span class="p">)</span>
