--- a/Overfittingbiaisedandunbiaisedvariance.html
+++ b/Overfittingbiaisedandunbiaisedvariance.html
@@ -11861,7 +11861,7 @@ $$\hat{\theta} =arg \max_{\theta} \{ \prod_{i=1}^N Pr(x_i| \theta)  \}   $$</p>
 <h1 id="Goal-:-We-want-to-show-that-maximum-likelihood-methodology-suffer-from-the-overfitting-phenomena-and-under-estimate-the-variance.">Goal : We want to show that maximum likelihood methodology suffer from the overfitting phenomena and under estimate the variance.<a class="anchor-link" href="#Goal-:-We-want-to-show-that-maximum-likelihood-methodology-suffer-from-the-overfitting-phenomena-and-under-estimate-the-variance.">&#182;</a></h1><h1 id="The-methodology">The methodology<a class="anchor-link" href="#The-methodology">&#182;</a></h1><p>1°) We create a data set that contains samples drawn independently from a Gaussian distribution whose mean $\mu$ and variance $\sigma^2$ that are unknown.</p>
 <p>2°) we would like to determine these parameters ($\mu$ and $\sigma^2$) from the data set.</p>
 <p>3°) We find the parameter values that maximize the likelihood function.</p>
-<p>4°) We show that the variance est biased</p>
+<p>4°) We show that the variance is biased because the expectation of the variance estimator does not lead to $\sigma^2$</p>
 
 </div>
 </div>
